--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ numpy==1.24.1
 torch==1.13.1
 pandas==1.2.1
 sentence_transformers==2.2.2
+transformers<4.31.0
 tqdm==4.49.0
 scikit-image==0.19.3
 wandb==0.13.9
