--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,5 @@
-bert_score==0.3.10
-spacy==3.0.7
-pyahocorasick==1.4.2
-git+https://github.com/google-research/bleurt
-numpy==1.24.1
-torch==1.13.1
-pandas==1.2.1
-sentence_transformers==2.2.2
 transformers<4.31.0
-tqdm==4.49.0
-scikit-image==0.19.3
-wandb==0.13.9
-pytest==7.2.2
+numpy~=1.24.1
+torch~=1.10.0
+sentence_transformers~=2.2.2
+tqdm~=4.49.0
