--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel twine build
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Build and publish
