--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "aces-metric"
-version = "0.0.1"
 description = "ACES metric for evaluating automated audio captioning models based on the semantics of sounds"
 readme = "README.md"
 authors = [{name = "Gijs Wijngaard", email = "hi@gijs.me"}]
 license = {file = "LICENSE"}
 requires-python = ">=3.9"
+dynamic = ["version", "dependencies"]
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.txt"]}
+version = {attr = "aces.__version__"}
