Added capability for different sizes of captions. Added clipping

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "ACES metric for evaluating automated audio captioning models base
 readme = "README.md"
 authors = [{name = "Gijs Wijngaard", email = "hi@gijs.me"}]
 license = {file = "LICENSE"}
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.11"
 dynamic = ["version", "dependencies"]
 
 [tool.setuptools.dynamic]
